--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="header-main">
       <div class="container header-container">
         <nav class="nav">
           <a href="./index.html" class="logo"
