--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     </header>
     <!-- Main Info -->
-    <main>
+    <main class="main-bunner">
       <div class="container">
         <section class="buner">
           <h1 class="buner_h">Effective Solutions for Your Business</h1>
@@ -226,7 +226,7 @@
     </main>
     <footer class="footer_main">
       <div class="container">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo logo-footer"
           >Web<span class="logo_studio_foot">Studio</span></a
         >
 
