--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <!-- Main Info -->
     <main class="main-bunner">
-      <div class="container">
+      <div class="container main-container">
         <section class="buner">
           <h1 class="buner_h">Effective Solutions for Your Business</h1>
           <button type="button" class="buner_btn">
