--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
       </div>
     </header>
     <!-- Main Info -->
-    <main class="main-bunner">
-      <div class="container main-container">
-        <section class="buner">
+    <main>
+      <section class="buner">
+        <div class="container">
           <h1 class="buner_h">Effective Solutions for Your Business</h1>
           <button type="button" class="buner_btn">
             <span class="buner_btn_text">Order Service</span>
           </button>
-        </section>
-      </div>
+        </div>
+      </section>
       <!-- Our ruls    -->
       <div class="container container-ruls">
         <section class="our_ruls">
