--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
         <div class="container container-ruls">
           <h2 class="visually-hidden">Our ruls</h2>
           <ul class="our_ruls_list">
-            <li>
+            <li class="our_ruls_list_li">
               <h3 class="our_ruls_h">Strategy</h3>
               <p class="our_ruls_text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="our_ruls_list_li">
               <h3 class="our_ruls_h">Punctuality</h3>
               <p class="our_ruls_text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="our_ruls_list_li">
               <h3 class="our_ruls_h">Diligence</h3>
               <p class="our_ruls_text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="our_ruls_list_li">
               <h3 class="our_ruls_h">Technologies</h3>
               <p class="our_ruls_text">
                 Design practice focused on digital experiences. We bring forth a
