--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         </div>
       </section>
       <!-- Our team -->
-        <section class="our_team">
-          <div class="container"></div>
+      <section class="our_team">
+        <div class="container">
           <h2 class="our_team_h">Our Team</h2>
           <ul class="our_team_list">
             <li class="our_team_cards">
@@ -146,8 +146,8 @@
               <p class="our_team_job">UI Designer</p>
             </li>
           </ul>
-          </div>
-        </section>
+        </div>
+      </section>
       <!-- Our projects -->
       <div class="container">
         <section class="our_prj">
