--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
                 alt="Mark Guerrero foto"
                 class="img_foto"
               />
-              <h3 class="our_team_name">Mark Guerrero</h3>
-              <p class="our_team_job">Product Designer</p>
+              <div class="our_worker">
+                <h3 class="our_team_name">Mark Guerrero</h3>
+                <p class="our_team_job">Product Designer</p>
+              </div>
             </li>
             <li class="our_team_cards">
               <img
@@ -120,8 +122,10 @@
                 alt="Tom Ford foto"
                 class="img_foto"
               />
-              <h3 class="our_team_name">Tom Ford</h3>
-              <p class="our_team_job">Frontend Developer</p>
+              <div class="our_worker">
+                <h3 class="our_team_name">Tom Ford</h3>
+                <p class="our_team_job">Frontend Developer</p>
+              </div>
             </li>
             <li class="our_team_cards">
               <img
@@ -131,8 +135,10 @@
                 alt="Camila Garcia foto"
                 class="img_foto"
               />
-              <h3 class="our_team_name">Camila Garcia</h3>
-              <p class="our_team_job">Marketing</p>
+              <div class="our_worker">
+                <h3 class="our_team_name">Camila Garcia</h3>
+                <p class="our_team_job">Marketing</p>
+              </div>
             </li>
             <li class="our_team_cards">
               <img
@@ -142,15 +148,17 @@
                 alt="Daniel Wilson foto"
                 class="img_foto"
               />
-              <h3 class="our_team_name">Daniel Wilson</h3>
-              <p class="our_team_job">UI Designer</p>
+              <div class="our_worker">
+                <h3 class="our_team_name">Daniel Wilson</h3>
+                <p class="our_team_job">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
       <!-- Our projects -->
-      <div class="container">
-        <section class="our_prj">
+      <section class="our_prj">
+        <div class="container">
           <h2 class="our_prj_h">Our Portfolio</h2>
           <ul class="our_prj_list">
             <li class="our_prj_cards">
@@ -162,8 +170,10 @@
             cards"
                 class="img_pic"
               />
-              <h3 class="our_prj_app">Banking App</h3>
-              <p class="our_prj_app_text">App</p>
+              <div class="our_app">
+                <h3 class="our_prj_app">Banking App</h3>
+                <p class="our_prj_app_text">App</p>
+              </div>
             </li>
             <li class="our_prj_cards">
               <img
@@ -173,8 +183,10 @@
                 alt="pay with qr"
                 class="img_pic"
               />
-              <h3 class="our_prj_app">Cashless Payment</h3>
-              <p class="our_prj_app_text">Marketing</p>
+              <div class="our_app">
+                <h3 class="our_prj_app">Cashless Payment</h3>
+                <p class="our_prj_app_text">Marketing</p>
+              </div>
             </li>
             <li class="our_prj_cards">
               <img
@@ -184,8 +196,10 @@
                 alt="app on notebook and phone"
                 class="img_pic"
               />
-              <h3 class="our_prj_app">Meditation App</h3>
-              <p class="our_prj_app_text">App</p>
+              <div class="our_app">
+                <h3 class="our_prj_app">Meditation App</h3>
+                <p class="our_prj_app_text">App</p>
+              </div>
             </li>
             <li class="our_prj_cards">
               <img
@@ -195,8 +209,10 @@
                 alt="taxi app"
                 class="img_pic"
               />
-              <h3 class="our_prj_app">Taxi Service</h3>
-              <p class="our_prj_app_text">Marketing</p>
+              <div class="our_app">
+                <h3 class="our_prj_app">Taxi Service</h3>
+                <p class="our_prj_app_text">Marketing</p>
+              </div>
             </li>
             <li class="our_prj_cards">
               <img
@@ -206,8 +222,10 @@
                 alt="other screen app"
                 class="img_pic"
               />
-              <h3 class="our_prj_app">Screen Illustrations</h3>
-              <p class="our_prj_app_text">Design</p>
+              <div class="our_app">
+                <h3 class="our_prj_app">Screen Illustrations</h3>
+                <p class="our_prj_app_text">Design</p>
+              </div>
             </li>
             <li class="our_prj_cards">
               <img
@@ -217,12 +235,14 @@
                 alt="app for courses"
                 class="img_pic"
               />
-              <h3 class="our_prj_app">Online Courses</h3>
-              <p class="our_prj_app_text">Marketing</p>
+              <div class="our_app">
+                <h3 class="our_prj_app">Online Courses</h3>
+                <p class="our_prj_app_text">Marketing</p>
+              </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer class="footer_main">
       <div class="container">
